--- a/CRM/CRM_GUI/DzialaniaWindow.xaml
+++ b/CRM/CRM_GUI/DzialaniaWindow.xaml
@@ -14,7 +14,7 @@
         <Button x:Name="buttonEdytujDzialanie" Content="Edytuj działanie" HorizontalAlignment="Left" Height="34" Margin="554,312,0,0" VerticalAlignment="Top" Width="210" FontWeight="SemiBold" FontSize="18" BorderBrush="#FF006674" Background="#FF006674" Foreground="White" Click="buttonEdytujDzialanie_Click"/>
         <Button x:Name="buttonUsunDzialanie" Content="Usuń działanie" HorizontalAlignment="Left" Height="34" Margin="554,351,0,0" VerticalAlignment="Top" Width="210" FontWeight="SemiBold" FontSize="18" BorderBrush="#FF006674"  Background="#FF05464F" Foreground="White" Click="buttonUsunDzialanie_Click"/>
         <Button x:Name="buttonWszUsunDzialania" Content="Usuń wszystkie" HorizontalAlignment="Left" Height="34" Margin="27,390,0,0" VerticalAlignment="Top" Width="195" FontWeight="SemiBold" FontSize="18" BorderBrush="#FF006674"  Background="#FF05464F" Foreground="White" Click="buttonWszUsunDzialania_Click"/>
-        <ComboBox x:Name="cmbboxSortuj" HorizontalAlignment="Left" Height="29" Margin="554,124,0,0" VerticalAlignment="Top" Width="210" FontSize="18" Background="#FFDAFAFF" BorderBrush="#FF006674" Foreground="#FF001D21" FontWeight="SemiBold">
+        <ComboBox x:Name="cmbboxSortuj" HorizontalAlignment="Left" Height="29" Margin="554,124,0,0" VerticalAlignment="Top" Width="210" FontSize="18" Background="#FFDAFAFF" BorderBrush="#FF006674" Foreground="#FF001D21">
             <ComboBoxItem Content="Data: od najnowszych" HorizontalAlignment="Left" Width="185" FontSize="15"/>
             <ComboBoxItem Content="Data: od najstarszych" HorizontalAlignment="Left" Width="185" FontSize="15"/>
         </ComboBox>
@@ -25,7 +25,7 @@
         <TextBlock x:Name="textblockIleDzialan" HorizontalAlignment="Left" Height="29" Margin="469,49,0,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top" Width="54" FontSize="20" FontWeight="SemiBold" Foreground="White" FontStretch="Expanded"/>
         <Button x:Name="buttonWyszukaj" Content="Wyszukaj" HorizontalAlignment="Left" Height="30" Margin="554,174,0,0" VerticalAlignment="Top" Width="210" FontWeight="SemiBold" FontSize="18" BorderBrush="#FF006674" Background="#FF006674" Foreground="White" Click="buttonWyszukaj_Click"/>
         <Button x:Name="buttonPokazWsz" Content="Pokaż wszystkie" HorizontalAlignment="Left" Height="34" Margin="332,390,0,0" VerticalAlignment="Top" Width="195" FontWeight="SemiBold" FontSize="18" BorderBrush="#FF006674" Background="#FF006674" Foreground="White" Click="buttonPokazWsz_Click"/>
-        <ComboBox x:Name="cmbboxWyszukaj" HorizontalAlignment="Left" Height="29" Margin="554,204,0,0" VerticalAlignment="Top" Width="210" FontSize="18" Background="#FFDAFAFF" BorderBrush="#FF006674" Foreground="#FF001D21" FontWeight="SemiBold">
+        <ComboBox x:Name="cmbboxWyszukaj" HorizontalAlignment="Left" Height="29" Margin="554,204,0,0" VerticalAlignment="Top" Width="210" FontSize="18" Background="#FFDAFAFF" BorderBrush="#FF006674" Foreground="#FF001D21">
             <ComboBoxItem Content="Przyszłe działania" HorizontalAlignment="Left" Width="185" FontSize="15"/>
             <ComboBoxItem Content="Działania od podanej daty" HorizontalAlignment="Left" Width="200" FontSize="15"/>
         </ComboBox>
