--- a/CRM/CRM_GUI/OsobaKontaktowaWindow.xaml
+++ b/CRM/CRM_GUI/OsobaKontaktowaWindow.xaml
@@ -16,7 +16,7 @@
     </Window.Resources>
     <Grid Margin="0,0,3.4,11">
 
-        <Label x:Name="labImie" Width="120" VerticalAlignment="Top" Margin="0,56,588,0" Height="32" HorizontalAlignment="Right" FontSize="15" Foreground="#FF00525E" Content="Imię:"/>
+        <Label x:Name="labImie" VerticalAlignment="Top" Margin="43,56,588,0" Height="32" FontSize="15" Foreground="#FF00525E" Content="Imię:"/>
         <Label x:Name="labNazwisko" Width="120" VerticalAlignment="Top" Margin="43,94,0,0" Height="32" HorizontalAlignment="Left" FontSize="15" Foreground="#FF00525E" Content="Nazwisko:"/>
         <TextBox x:Name="txtNazwisko" Width="525" VerticalAlignment="Top" TextWrapping="Wrap" Margin="163,93,0,0" Height="33" HorizontalAlignment="Left" FontWeight="Bold" Foreground="#FF001D21" Background="#FFDAFAFF" BorderBrush="#FF006674"/>
         <TextBox x:Name="txtImie" Width="525" VerticalAlignment="Top" TextWrapping="Wrap" Margin="163,56,0,0" Height="32" HorizontalAlignment="Left" FontWeight="Bold" Foreground="#FF001D21" Background="#FFDAFAFF" BorderBrush="#FF006674"/>
