--- a/CRM/CRM_GUI/KonkurentWindow.xaml
+++ b/CRM/CRM_GUI/KonkurentWindow.xaml
@@ -9,23 +9,23 @@
     <Grid Margin="0,0,-0.2,0" Height="442" VerticalAlignment="Top">
         <Label x:Name="labNazwa" Content="Nazwa" HorizontalAlignment="Left" Height="32" Margin="33,16,0,0" VerticalAlignment="Top" Width="139" FontSize="14" />
         <Label x:Name="labBranza" Content="Branża" HorizontalAlignment="Left" Height="32" Margin="33,53,0,0" VerticalAlignment="Top" Width="139" FontSize="14" />
-        <Label x:Name="labNIP" Content="NIP" HorizontalAlignment="Left" Height="32" Margin="33,90,0,0" VerticalAlignment="Top" Width="139" FontSize="14" />
+        <Label x:Name="labNIP" Content="NIP" HorizontalAlignment="Left" Height="32" Margin="33,276,0,0" VerticalAlignment="Top" Width="139" FontSize="14" />
         <Label x:Name="labDataZal" Content="Data założenia" HorizontalAlignment="Left" Height="32" Margin="33,127,0,0" VerticalAlignment="Top" Width="139" FontSize="14" />
         <Label x:Name="labKraj" Content="Kraj" HorizontalAlignment="Left" Height="32" Margin="33,164,0,0" VerticalAlignment="Top" Width="139" FontSize="14" />
         <Label x:Name="labMiasto" Content="Miasto" HorizontalAlignment="Left" Height="32" Margin="33,201,0,0" VerticalAlignment="Top" Width="139" FontSize="14" />
-        <Label x:Name="labZagrozenie" Content="Stopień zagrożenia" HorizontalAlignment="Left" Height="32" Margin="33,276,0,0" VerticalAlignment="Top" Width="139" FontSize="14" />
+        <Label x:Name="labZagrozenie" Content="Stopień zagrożenia" HorizontalAlignment="Left" Height="32" Margin="33,90,0,0" VerticalAlignment="Top" Width="139" FontSize="14" />
         <Label x:Name="labKodPocztowy" Content="Kod pocztowy" HorizontalAlignment="Left" Height="32" Margin="33,239,0,0" VerticalAlignment="Top" Width="139" FontSize="14" />
         <Label x:Name="labNotatki" Content="Notatki" HorizontalAlignment="Left" Height="32" Margin="33,313,0,0" VerticalAlignment="Top" Width="139" FontSize="14" />
 
         <TextBox x:Name="txtNazwa" HorizontalAlignment="Left" Height="32" Margin="177,16,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="435" Background="Azure"/>
-        <TextBox x:Name="txtNIP" HorizontalAlignment="Left" Height="32" Margin="177,90,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="435" Background="Azure"/>
+        <TextBox x:Name="txtNIP" HorizontalAlignment="Left" Height="32" Margin="177,276,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="435" Background="Azure"/>
         <TextBox x:Name="txtDataZal" HorizontalAlignment="Left" Height="32" Margin="177,127,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="435" Background="Azure"/>
         <TextBox x:Name="txtKraj" HorizontalAlignment="Left" Height="32" Margin="177,164,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="435" Background="Azure"/>
         <TextBox x:Name="txtMiasto" HorizontalAlignment="Left" Height="32" Margin="177,201,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="435" Background="Azure"/>
         <TextBox x:Name="txtNotatki" HorizontalAlignment="Left" Height="32" Margin="177,313,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="435" Background="Azure"/>
         <TextBox x:Name="txtKodPocztowy" HorizontalAlignment="Left" Height="32" Margin="177,239,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="435" Background="Azure"/>
-        <Button x:Name="btnZatwierdz" Content="Zatwierdź" HorizontalAlignment="Left" Height="35" Margin="307,362,0,0" VerticalAlignment="Top" Width="93" Click="buttonZatwierdz_Click" Cursor="Hand" RenderTransformOrigin="0.493,0.5"/>
-        <Button x:Name="btnAnuluj" Content="Anuluj" HorizontalAlignment="Left" Height="35" Margin="405,362,0,0" VerticalAlignment="Top" Width="93" Click="buttonAnuluj_Click" Cursor="Hand"/>
+        <Button x:Name="btnZatwierdz" Content="Zatwierdź" HorizontalAlignment="Left" Height="35" Margin="307,362,0,0" VerticalAlignment="Top" Width="93" FontWeight="bold" Foreground="White" Background="#FF006674" Click="buttonZatwierdz_Click" Cursor="Hand" RenderTransformOrigin="0.493,0.5"/>
+        <Button x:Name="btnAnuluj" Content="Anuluj" HorizontalAlignment="Left" Height="35" Margin="405,362,0,0" VerticalAlignment="Top" Width="93" FontWeight="bold" Foreground="White" Background="#FF006674" Click="buttonAnuluj_Click" Cursor="Hand"/>
         <ComboBox x:Name="comboBoxBranze" HorizontalAlignment="Left" Height="32" Margin="177,53,0,0" VerticalAlignment="Top" Width="435">
             <ComboBoxItem Content="IT" HorizontalAlignment="Left" Width="463.2"/>
             <ComboBoxItem Content="Finanse" HorizontalAlignment="Left" Width="463.2"/>
@@ -36,7 +36,7 @@
             <ComboBoxItem Content="Energetyka" HorizontalAlignment="Left" Width="463.2"/>
             <ComboBoxItem Content="Inne" HorizontalAlignment="Left" Width="463.2"/>
         </ComboBox>
-        <ComboBox x:Name="comboBoxZagrozenie" HorizontalAlignment="Left" Height="32" Margin="177,275,0,0" VerticalAlignment="Top" Width="435">
+        <ComboBox x:Name="comboBoxZagrozenie" HorizontalAlignment="Left" Height="32" Margin="177,90,0,0" VerticalAlignment="Top" Width="435">
             <ComboBoxItem Content="Bardzo niski" HorizontalAlignment="Left" Width="463.2"/>
             <ComboBoxItem Content="Niski" HorizontalAlignment="Left" Width="463.2"/>
             <ComboBoxItem Content="Średni" HorizontalAlignment="Left" Width="463.2"/>
